vlib/v/parser/tests/deprecated_after_without_deprecated.out
vlib/v/parser/tests/deprecated_after_without_deprecated.vv:1:1: error: `@[deprecated_after]` has been removed, use `@[deprecated(..., after: ...)]` instead
    1 | @[deprecated_after: '2025-10-10']
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    2 | fn my_fn() {
    3 | }
